--- a/tesi/sections/1/3.tex
+++ b/tesi/sections/1/3.tex
@@ -44,12 +44,14 @@
 
     \begin{defn}
         We define the scalar product called \ii{integration} $\langle, \rangle : C_p \times C_p \to \R$ on the canonical basis of $C_p$ to be 
-        \[ \langle i, j \rangle = \delta_{ij} ,\] 
+        \[ \langle i, j \rangle = \delta_{ij} ,\]  
         where $i,j$ are any two p-simplexes in the canonical basis of $C_p$ and $\delta_{ij}$ is the Kronecker Delta.
     \end{defn}
-    It is convenient, from now on,  to write cochains $\sigma^*$ as bra vectors $\bra{\sigma}$, chains $\sigma$ as ket vectors $\ket{\sigma}$,
-    and the scalar product $\scal{i}{j}$ as the bra-ket product $\braket{i}{j}$.
 
+    It is convenient, from now on,  to write cochains $\sigma^*$ as bra vectors $\bra{\sigma}$, chains $\sigma$ as ket vectors $\ket{\sigma}$,
+    and the scalar product $\scal{i}{j}$ as the bra-ket product $\braket{i}{j}$. The $\delta_{ij}$ can always be replaced with a positive definite
+    weight matrix $w^p_{ij}$.\\
+    \hfill \\
     The same Hilbert space structure allows us to represent the coboundary operator $d$ in the space of chains with its integral kernel $\del^\dagger$.
 
     \begin{defn}
