--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -50,3 +50,9 @@
     author = {Danijela Horak and Juergen Jost},
     year={2011}
 }
+
+@book{mclane,
+  author = {MacLane, Saunders},
+  title = {Categories for the Working Mathematician},
+  year = 1971
+}
