--- a/tesi/sections/appendixA/main.tex
+++ b/tesi/sections/appendixA/main.tex
@@ -1,20 +1,18 @@
 \documentclass[../1.tex]{subfiles}
 \begin{document}
 
-    At the beginning of \autoref{ch:1} we mentioned that a relevant concept in algebriac topology is that of conversion form
-    structures where a problem cannot be solved to structures where the problem can be solved. Not all conversions are good ones,
-    we need the language of category theory to define the rules that make a conversion a good conversion, i.e. functoriality.
-
     \begin{defn}
-        A \ii{category} $\bb{C}$ consists of three ingerdients:\\
-        a class of \ii{objects} $Obj(\bb{C})$; sets of \ii{morphisms}
-        $Hom(A,B)$ for every ordered pair $(A,B) \in Obj(\bb{C}) \times Obj(\bb{C})$; a composition $Hom(A,B) \times Hom(B,C) \to Hom(A,C)$, denoted
-        by $(f,g) \mapsto f \circ g$ for every $A,B,C \in Obj(\bb{C})$, satisfying the following axioms:
-        \begin{enumerate}[(i)]
-            \item the family of $Hom(A,B)$ is pairwise disjoint,
-            \item the composition, when defined, is associative,
-            \item for each $A \in Obj(\bb{C})$ there exists an \ii{identity} $1_A \in Hom(A,A)$ such that for $f \in Hom(A,B)$ and $g \in Hom(C,A)$
-                  we have that $1_A \circ f = f$ and $g \circ 1_A = g$.
+        A \ii{category} $\bb{C}$ consists of three ingerdients:
+        \begin{enumerate}[1.]
+            \item a class of \ii{objects} $Obj(\bb{C})$,
+            \item sets of \ii{morphisms} $Hom(A,B)$ for every ordered pair $(A,B) \in Obj(\bb{C}) \times Obj(\bb{C})$,
+            \item a composition $Hom(A,B) \times Hom(B,C) \to Hom(A,C)$, denoted by $(f,g) \mapsto f \circ g$ for every $A,B,C \in Obj(\bb{C})$, satisfying the following axioms:
+            \begin{enumerate}[(i)]
+                \item the family of $Hom(A,B)$ is pairwise disjoint,
+                \item the composition, when defined, is associative,
+                \item for each $A \in Obj(\bb{C})$ there exists an \ii{identity} $1_A \in Hom(A,A)$ such that for $f \in Hom(A,B)$ and $g \in Hom(C,A)$
+                      we have that $1_A \circ f = f$ and $g \circ 1_A = g$.
+            \end{enumerate}
         \end{enumerate}
     \end{defn}
 
@@ -23,18 +21,18 @@
     \begin{defn}
         Let $\bb{A}$ and $\bb{C}$ be categories, a \ii{functor} $T : \bb{A} \to \bb{C}$ is a function, that is, 
         \begin{enumerate}[(i)]
-            \item $A \in Obj(\bb{A}) \implies TA \in Obj(\bb{C})$,
-            \item $f:A \to A' \implies Tf: TA \to TA' \quad A,A' \in Obj(\bb{A})$,
+            \item for each $A \in Obj(\bb{A})$ it assigns $TA \in Obj(\bb{C})$,
+            \item for each morphism $f:A \to A'$ it assigns a morphism $Tf: TA \to TA' \quad \forall A,A' \in Obj(\bb{A})$,
             \item if $f,g$ are morphisms in $\bb{A}$ for which $g \circ f$ is defined, then $T(g \circ f) = (Tg) \circ (Tf)$,
             \item $T(1_A)= 1_{TA} \quad \forall A \in \bb{A}$.
         \end{enumerate}
     \end{defn}
 
-    The property $(iii)$ of the previous definition actually defines what we shall call \ii{covariant functors}.
-    If instead we require $T(g \circ f) = (Tf) \circ (Tg)$, we are defining a so called \ii{contravariant functor}.
+    The property (iii) of the previous definition actually defines what we shall call \ii{covariant functors}.
+    If instead we require $T(g \circ f) = (Tf) \circ (Tg)$, we are defining a \ii{contravariant functor}.
 
     \begin{defn}
-        An \ii{equivalence} in a category $\bb{C}$ is a morphism $f : A \to B$ for which there exists a morphism $g : B \to A$ such that
+        An \ii{equivalence} in a category $\bb{C}$ is a morphism $f : A \to B$ for all $A,B \in Obj(\bb{C})$ for which there exists a morphism $g : B \to A$ such that
         $ f \circ g = 1_B$ and $ g \circ f = 1_A$.
     \end{defn}
 
@@ -53,6 +51,6 @@
         Topological spaces and continuous functions are a category \bb{Top}, whose equivalences are called homeomorphisms.
     \end{prop}
 
-    Other examples of categories can be found in \cite{rotman}.
+    Other examples of categories can be found in \cite{rotman} at 0.3 and in \cite{mclane}.
 
 \end{document}
