--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -119,7 +119,7 @@
         \end{enumerate}
     \end{defn}
 
-    \ref{fig:2} represents a simplicial complex, while \ref{fig:3} represents a collection of simplexes which is not a simplicial complex. 
+    \autoref{fig:2} represents a simplicial complex, while \autoref{fig:3} represents a collection of simplexes which is not a simplicial complex. 
 
     
     \begin{figure}[H]
@@ -136,7 +136,7 @@
         \label{fig:3}
     \end{figure}
 
-    In fact, in \autoref{fig:3} that the intersection property of simplicial complexes is not satisfied.\\
+    In fact, we can see in \autoref{fig:3} that the intersection property of simplicial complexes is not satisfied.\\
 
     \newpage
     In this first part we analyzed simplicial complexes as peculiar subsets of $\R^n$, which from now on we shall call \ii{geometric simplicial complexes}.
