--- a/tesi/sections/appendixA/main.tex
+++ b/tesi/sections/appendixA/main.tex
@@ -10,8 +10,7 @@
             \begin{enumerate}[(i)]
                 \item the family of $Hom(A,B)$ is pairwise disjoint,
                 \item the composition, when defined, is associative,
-                \item for each $A \in Obj(\bb{C})$ there exists an \ii{identity} $1_A \in Hom(A,A)$ such that for $f \in Hom(A,B)$ and $g \in Hom(C,A)$
-                      we have that $1_A \circ f = f$ and $g \circ 1_A = g$.
+                \item for each $A \in Obj(\bb{C})$ there exists an \ii{identity} $1_A \in Hom(A,A)$ such that for $f \in Hom(A,B)$ and $g \in Hom(C,A)$ we have that $1_A \circ f = f$ and $g \circ 1_A = g$.
             \end{enumerate}
         \end{enumerate}
     \end{defn}
