--- a/tesi/sections/1/2.tex
+++ b/tesi/sections/1/2.tex
@@ -4,57 +4,80 @@
 
     An important field in algebraic topology is homology theory. We shall discuss homology theory to the extent
     that allows us to define the laplacian operator on simplicial complexes, for supplementary readings see \cite{singerthorpe,hatcher}.
-    First we want to equip our simplicial complexes with an orientation.
+    First we want to equip our simplicial complexes with an orientation. So far we have considered the simplex $\{x_i\}_{i \in I}$ to remain
+    unchanged under abritrary reorderings of the index set $I$, but in the most of the application this is not the case.
 
+    \begin{prop}
+        Let $\{x_i\}_{i \in I}$ be a $p$-simplex, then
+        \[ \{x_i\}_{i \in I} \sim \{x_i\}_{i \in \pi(I)} \iff sgn(\pi) = 1,\]
+        where $\pi : I \to I$ is a permutation of the indexes and $sgn\pi$ its sign,
+        is an equivalence relation.
+    \end{prop}
+    \begin{rem}
+        Let $S_{p+1}$ be the group of permutations of a $p$-simplex, and $\{\m1,1\}$ a multiplicative group,
+        we recall the fact that $sgn: S_{p+1} \to \{\m1,1\}$ is a group homomorphism, that is \[sgn(\pi\eta) = sgn(\pi)sgn(\eta) \quad \forall \pi,\eta \in S_{p+1}.\]
+    \end{rem}
+    \begin{proof}
+        We divide the proof in three steps:
+        \begin{enumerate}[(i)]
+            \item Since $sgn(id_I) = 1$ we have that $\{x_i\}_{i \in I} \sim \{x_i\}_{i \in id_I(I)} = \{x_i\}_{i \in I} $.
+            \item Since $sgn(\pi)sgn(\pi^{-1}) = sgn(\pi\pi^{-1})=sgn(id_I)=1$ we have that $sgn(\pi) = sgn(\pi^-1)$, therefore
+                  $ \{x_i\}_{i \in I} \sim \{x_i\}_{i \in \pi(I)} \iff \{x_i\}_{i \in \pi(I)} \sim \{x_i\}_{i \in I}$.
+            \item The transitivity is a consequence of the fact that the product of two even permutations is also even.\qedhere
+        \end{enumerate}
+    \end{proof}
+  
     \begin{defn}
-        An \ii{oriented} simplicial complex $\mc{A}$ is a simplicial complex and a partial order on $Vert(\mc{A})$ whose
-        restriction to the vertices of any simplex in $\mc{A}$ is a linear order.
+        We define an \ii{oriented simplex} $\ket{x_i}_{i \in I}$ to be a simplex $\{x_i\}_{i \in I}$ together with the choice of
+        an equivalence class of $\sim$.
     \end{defn}
 
-    Then we define on the simplicial complex a vector space structure.
+    \begin{defn}
+        Let $\mc{A}$ be a simplicial complex and let $G$ denote an arbitrary additive abelian group. We define the \ii{group of p-chains} 
+        \[ C_p(\mc{A},G) := \frac{\{ \sum_{i \in I} g_i \ket{\sigma_i} : g_i \in G \}}{\{g_i\ket{x_0,x_1,...,x_p}+g_i\ket{x_1,x_0,...x_p} : g_i \in G\} }.\]
+    \end{defn}
+    {\color{red} Devo pensarci un po' a questo modo di definirlo, ma credo che intenda semplicemente di indicarle due orientazioni opposte mettendo come fattore 
+    l'inverso. Cercherò di approfondire i free abelian groups dal Lang.}
+
+
+    For the most of the applications the groups $\Z,\R,\Z_2$ are considered. To keep our notation light we shall write $C_p$ instead of $C_p(\mc{A},G)$.
+
+    \begin{prop}
+        $C_p(\mc{A},G)$ is an abelian group.
+    \end{prop}
+
+    A particularly relevant role in homology theory is played by the \ii{boundary map}. First we define the boundary of an oriented simplex.
 
     \begin{defn}
-        Let $\mc{A}$ be an oriented simplicial complex, on $\mc{A}$ we define a formal sum in order
-        to obtain a vector space on the real numbers, that is
-        \[ C_p(\mc{A}) := \{ \sum_i \lambda_i \sigma_i^p \quad \lambda_i \in \R \},\]
-        where $\sigma_i^p$ are oriented p-simplexes of $\mc{A}$.\\ % The action boundary operator can be visually interpreted as in the following figure.\\
-        % \includegraphics[width = 12cm, height = 6cm]{sections/1/boundary}
-        All $\sigma_i^p = [v_0,\dots,v_p]$ can have two possible orientations that satisfy
-        $ [v_0,\dots,v_p] = sgn (\pi)[v_{\pi 0},\dots,v_{\pi p}]$,
-        where $\pi$ is a permutation of $\{0,\dots,p\}$.  
-        We shall call $C_p$ the space of \ii{simplicial p-chains}.      
+        Let $\ket{\sigma} = \ket{x_0,...,x_{p+1}}$ be an oriented $(p+1)$-simplex. The boundary $\del\ket{\sigma}$ of $\ket{\sigma}$ is the $p$-chain
+        defined by \[ \del_{p+1}\ket{\sigma} = \sum_{i = 0}^{p+1}(-1)^i\ket{x_0,...,\hat{x_i},...,x_{p+1}}\]
+        where the  $\hat{}$  over a symbol means that symbol is deleted.
     \end{defn}
 
-    In the study of chains' spaces a special role is played by a particular linear operator called
-    boundary operator.
-
+    \begin{rem}
+        Note that whenever we are able to construct a geometric realization for the oriented simplicial complex, the set $\bigcup_{i = 0}^{p+1}[x_0,...,\hat{x_i},...,x_p+1]$
+        is the topological boundary of $[\sigma]$.
+    \end{rem}
+    
     \begin{defn}
-        We define the \ii{boundary} operator $\del_{p+1} : C_{p+1} \to C_p$ by setting
-        \[ \del_{p+1}([v_0,\dots,v_p]) = \sum_{i=0}^p (-1)^i[v_0,\dots,\hat{v_i},\dots,v_p] \]
-        (where $\hat{v_i}$ means delete the vertex $v_i$) and extending by linearity.
+        We define the \ii{boundary map} $\del_{p+1} : C_{p+1} \to C_p$ to be the group homomorphism defined by
+        \[ \del_{p+1}(\sum_{i \in I}g_i\ket{\sigma_i}) = \sum_{i \in I}g_i\del_{p+1}\ket{\sigma_i} .\]
     \end{defn}
-
-   The set of all chains' spaces with their respective boundary operators is a special category that we call a \ii{chain complex},
-   the property that defines a chain complex is the following.
 
     \begin{thm}
-        $\del^2 = 0$.
+        The boundary maps satisfy $\del_p \circ \del_{p+1} = 0$.
     \end{thm}
     \begin{proof}
-        Let $\del_{p+1}([v_0,\dots,v_{p+1}]) = \sum_{i=0}^{p+1} (-1)^i[v_0,\dots,\hat{v_i},\dots,v_{p+1}]$ then 
-        \[\del_p(\del_{p+1}([v_0,\dots,v_{p+1}])) =\sum_{j=0, j \neq i}^{p+1} \sum_{i=0}^{p+1} (-1)^{i+j}[v_0,\dots,\hat{v_i},\dots,\hat{v_j},\dots,v_{p+1}] = 0.\]     
+        Since the boundary maps are linear it is sufficient to check this on the generators.
+        Let $\del_{p+1}\ket{v_0,\dots,v_{p+1}} = \sum_{i=0}^{p+1} (-1)^i\ket{v_0,\dots,\hat{v_i},\dots,v_{p+1}}$ then 
+        \[(\del_p \circ \del_{p+1})\ket{v_0,\dots,v_{p+1}} = \sum_{j=0, j \neq i}^{p+1} \sum_{i=0}^{p+1} (-1)^{i+j}\ket{v_0,\dots,\hat{v_i},\dots,\hat{v_j},\dots,v_{p+1}} = 0. \qedhere \]     
     \end{proof}
-
-    We are interested in boundary operators because they allow us to define the p-holes, which mathematically can be thought as the
-    p-cycles, p-chains that have no boundary, that are not boundary of any higher dimensional simplex. It is possible to show that the
-    p-holes form a vector space and if two simplicial complex are isomorphic also their p-holes' spaces are. This, given what we said in the previous section,
-    allows us to decide if two topological spaces are not homeomorphic by looking at the p-holes' spaces of their triangulations.
 
     \begin{defn}
         We define the \ii{p-homology group} to be 
         \[H_p := \frac{ker\del_p}{im\del_{p+1}},\] 
-        where $im\del_{p+1}$ is the group of simplicial p-cycles and
-        $ker\del_p$ is the group of simplicial p-boundaries.
+        where $im\del_{p+1}$ is called the group of simplicial \ii{p-cycles} and
+        $ker\del_p$ is called the group of simplicial \ii{p-boundaries}.
     \end{defn}
 
     The homology group is therefore the space of cycles that are not boundaries.
