--- a/tesi/sections/1/3.tex
+++ b/tesi/sections/1/3.tex
@@ -1,36 +1,22 @@
 \documentclass[../1.tex]{subfiles}
 \begin{document}
 
-    In order to define data on simplicial complexes we are interested in studying the dual of the simplicial chain complex
-    which we shall call a  simplicial cochain complex.
-    % The cochain complex is the image of the chain complex via a special functor,
-    % i.e. the dual contravariant functor.
+    In order to define data on simplicial complexes we are interested in studying the dual of the chains $\ket{\sigma}$
+    which we shall call cochains $\bra{\sigma}$.
+       
+    \begin{defn}
+        Let $C_p$ be the group p-chains, we define the group of \ii{p-cochains} to 
+        be $C^p := Hom(C_p, G)$, i.e. the dual space of $C_p$.
+    \end{defn}
 
-    % \begin{defn}
-    %     Let \bb{V} be the category of vector spaces and linear transformations between them, we define the \ii{dual
-    %     contravariant functor} by
-    %     \[ V \in Obj(\bb{V}) \mapsto V^* := Hom(V,\R) \in Obj(\bb{V}) \]
-    %     \[ \del \in Hom(U,V) \mapsto \del^* \in Hom(V^*,U^*) : \del^*(\phi)=\phi \circ \del . \]
-    % \end{defn}
+    \begin{defn}
+        The dual of the boundary maps which we shall call
+        \ii{coboundary maps}, is the group homomorphsm defined by
+        \[ d_{p+1} : C^p \to C^{p+1} \quad d_p(\bra{\sigma}) := \bra{\sigma} \circ \del_{p+1} \forall \bra{\sigma} \in C^p.\]
+    \end{defn}
 
-    % By applying this functor to the spaces of simplicial chains we are able to define the space of simplicial cochains, 
-    % and their respective coboundary operator.
+    One could also show that the property $d^p+1 \circ d_p$ is verified.
     
-    \begin{defn}
-        Let $C_p$ be the space of simplicial p-chains, we define the space of \ii{simplicial cochains} to 
-        be $C^p := Hom(C_p, \R)$, i.e. the dual space of $C_p$.
-    \end{defn}
-
-    \begin{defn}
-        The dual of the boundary operator which we shall call
-        \ii{coboundary operator}, is defined to be 
-        \[ d_{p+1} : C^p \to C^{p+1} \quad d_p(\sigma^*) = \sigma^* \circ \del_{p+1} .\]
-    \end{defn}
-
-    One could also show that the property $d^2 = 0$ is verified in the so defined cochain complex.
-    The homology group could in general be define for any chain complex, in particulare for the simplicial cochain
-    complex it takes the name of cohomology group.
-
     \begin{defn}
         We define the \ii{p-cohomology group} to be 
         \[H^p := \frac{ker d_{p+1}}{im d_{p}},\] 
@@ -39,42 +25,25 @@
     \end{defn}
 
     To have a mirrored intuition of what the coboundary operator actually does we equipe our simplicial chain spaces with
-    an inner product. This finite dimensional Hilbert space structure shall allow us to represent the action of a cochain $\sigma^*$ on the chain $\tau$ 
-    as the scalar product $\scal{\sigma}{\tau}$.
+    an inner product. This finite dimensional Hilbert space structure shall allow us to represent the cochain $\bra{\sigma}$ evaluated on the chain $\ket{\tau}$ 
+    as the scalar product $\braket{\sigma}{\tau}$.
 
     \begin{defn}
-        We define the scalar product called \ii{integration} $\langle, \rangle : C_p \times C_p \to \R$ on the canonical basis of $C_p$ to be 
-        \[ \langle i, j \rangle = \delta_{ij} ,\]  
+        We define the scalar product called \ii{integration} $\braket{}{} : C_p \times C_p \to \R$ on the canonical basis of $C_p$ to be 
+        \[ \braket{i}{j} = \delta_{ij} ,\]  
         where $i,j$ are any two p-simplexes in the canonical basis of $C_p$ and $\delta_{ij}$ is the Kronecker Delta.
     \end{defn}
 
-    It is convenient, from now on,  to write cochains $\sigma^*$ as bra vectors $\bra{\sigma}$, chains $\sigma$ as ket vectors $\ket{\sigma}$,
-    and the scalar product $\scal{i}{j}$ as the bra-ket product $\braket{i}{j}$. The $\delta_{ij}$ can always be replaced with a positive definite
-    weight matrix $w^p_{ij}$.\\
     \hfill \\
     The same Hilbert space structure allows us to represent the coboundary operator $d$ in the space of chains with its integral kernel $\del^\dagger$.
 
     \begin{defn}
-        Let $d_{p+1} : C^p \to C^{p+1}$ be the coboundary operator, then for any $\sigma^* \in C^p, \tau \in C_{p+1}$ we can define its dual representation $\del^\dagger_{p+1}$ by
-        \[ (d_{p+1} \sigma^*)(\tau) = (d_{p+1} \bra{\sigma})\ket{\tau} = \braket{\del^\dagger_{p+1} \sigma}{\tau}. \]
+        Let $d_{p+1} : C^p \to C^{p+1}$ be the coboundary operator, then for any $\bra{\sigma} \in C^p, \tau \in C_{p+1}$ we can define its dual representation $\del^\dagger_{p+1}$ by
+        \[d_{p+1} \bra{\sigma})\ket{\tau} = \braket{\del^\dagger_{p+1} \sigma}{\tau}. \]
     \end{defn}
 
     It is easy to notice that our definitions lead to the restatement of the equivalent of the generalized Stokes' theorem on simplicial complexes
     according to the integration previously defined, i.e. $(d\bra{\sigma})\ket{\tau} = \braket{\sigma}{\del\tau}$. One can therefore think of the coboundary
     operator as a discrete exterior derivative acting on cochains.
-   
-    % \begin{thm}
-    %     $H_p \simeq H^p$
-    % \end{thm}
-    % \begin{proof}
-    %     Let $A_p, A_{p+1}$ be the real matrices associated to the boundary operators $\del_p, \del_{p+1}$ on the canonical basis of p-simplexes,
-    %     then we have that since $\langle \sigma, A_{p+1} \tau \rangle = \langle \sigma, A^\dagger_{p+1} \tau \rangle$ also have that
-    %     \[ H_p =: \frac{ker\del_p}{im\del_{p+1}} = \frac{kerA_p}{imA_{p+1}},\]
-    %     \[ H^p =: \frac{kerd_{p+1}}{imd_p} = \]
-    %     Let's now write the dimensional equations for $A_p, A_{p+1}$,
-    %     \[ n_{p+1} := dim(C_{p+1}) = dim(imA_{p+1}) + dim(kerA_{p+1}) \]
-    %     \[ n_p := dim(C_p) = dim(imA_p) + dim(kerA_p) \]
-    %     \[ dim(H_p) = n_p - dim(imA_p) - (n_{p+1}-dim(kerA_{p+1})) \]
-    % \end{proof}
 
 \end{document}
