--- a/tesi/sections/1/3.tex
+++ b/tesi/sections/1/3.tex
@@ -1,7 +1,7 @@
 \documentclass[../1.tex]{subfiles}
 \begin{document}
 
-    In order to define data on simplicial complexes we are interested in studying the dual of the chains $\ket{\sigma}$
+    In order to define data on simplicial complexes we are interested in studying the dual of the chains $\ket{\sigma}$,
     which we shall call cochains $\bra{\sigma}$.
        
     \begin{defn}
@@ -9,13 +9,17 @@
         be $C^p := Hom(C_p, G)$, i.e. the dual space of $C_p$.
     \end{defn}
 
+    As well as with for chains, we have also for cochains a sequence of homeomorphisms called \ii{coboundary maps}. The coboundary maps are defined
+    to be the dual of the boundary maps, hence satisfying a dual version of the homology lemma called \ii{cohomology lemma}.
+
     \begin{defn}
         The dual of the boundary maps which we shall call
         \ii{coboundary maps}, is the group homomorphsm defined by
-        \[ d_{p+1} : C^p \to C^{p+1} \quad d_p(\bra{\sigma}) := \bra{\sigma} \circ \del_{p+1} \forall \bra{\sigma} \in C^p.\]
+        \[ d_{p+1} : C^p \to C^{p+1} \quad d_p(\bra{\sigma}) := \bra{\sigma} \del_{p+1} \quad \forall \bra{\sigma} \in C^p.\]
+        Therefore $(d_{p+1}\bra{\sigma})\ket{\tau} = \bra{\sigma} \del_{p+1} \ket{\tau} \quad \forall \ket{\tau} \in C_p$.
     \end{defn}
 
-    One could also show that the property $d^p+1 \circ d_p$ is verified.
+    The proof of $d^p+1 \circ d_p$ follow directly from the homology lemma. The cohomology lemma allows us to define the \ii{cohomology group}.
     
     \begin{defn}
         We define the \ii{p-cohomology group} to be 
@@ -24,26 +28,26 @@
         $ker d_p$ is the group of simplicial p-coboundaries.
     \end{defn}
 
-    To have a mirrored intuition of what the coboundary operator actually does we equipe our simplicial chain spaces with
+    To have a specular intuition of what the coboundary operator actually does, we equipe our simplicial chain groups with
     an inner product. This finite dimensional Hilbert space structure shall allow us to represent the cochain $\bra{\sigma}$ evaluated on the chain $\ket{\tau}$ 
-    as the scalar product $\braket{\sigma}{\tau}$.
+    as the inner product $\braket{\sigma}{\tau}$.
 
     \begin{defn}
-        We define the scalar product called \ii{integration} $\braket{}{} : C_p \times C_p \to \R$ on the canonical basis of $C_p$ to be 
+        We define the scalar product $\braket{}{} : C_p \times C_p \to \R$ on the canonical basis of $C_p$ to be 
         \[ \braket{i}{j} = \delta_{ij} ,\]  
         where $i,j$ are any two p-simplexes in the canonical basis of $C_p$ and $\delta_{ij}$ is the Kronecker Delta.
     \end{defn}
 
-    \hfill \\
-    The same Hilbert space structure allows us to represent the coboundary operator $d$ in the space of chains with its integral kernel $\del^\dagger$.
+    The same Hilbert space structure allows us to represent the coboundary operator $d$ acting on a cochain with its cochain representative.
 
     \begin{defn}
-        Let $d_{p+1} : C^p \to C^{p+1}$ be the coboundary operator, then for any $\bra{\sigma} \in C^p, \tau \in C_{p+1}$ we can define its dual representation $\del^\dagger_{p+1}$ by
-        \[d_{p+1} \bra{\sigma})\ket{\tau} = \braket{\del^\dagger_{p+1} \sigma}{\tau}. \]
+        Let $d_{p+1} : C^p \to C^{p+1}$ be the coboundary operator, then for any \\ $\bra{\sigma} \in C^p, \tau \in C_{p+1}$ we can define its dual representation $\del^\dagger_{p+1}$ by
+        \[(d_{p+1}\bra{\sigma})\ket{\tau} = \bra{\sigma} \del_{p+1} \ket{\tau} = \bra{\tau} \del^\dagger_{p+1} \ket{\sigma} \quad \forall \ket{\tau} \in C_p. \]
     \end{defn}
 
-    It is easy to notice that our definitions lead to the restatement of the equivalent of the generalized Stokes' theorem on simplicial complexes
-    according to the integration previously defined, i.e. $(d\bra{\sigma})\ket{\tau} = \braket{\sigma}{\del\tau}$. One can therefore think of the coboundary
-    operator as a discrete exterior derivative acting on cochains.
+    We can notice that our definitions lead to the restatement of the equivalent of the generalized Stokes' theorem on simplicial complexes
+    according to the integration previously defined, i.e. $(d\bra{\sigma})\ket{\tau} = \bra{\sigma}\del\ket{\tau}$. One can therefore think of the coboundary
+    operator as a discrete exterior derivative acting on cochains. Similarly we name the inner product \ii{integration} due to the analogy previously stated, the
+    choice of a measure of integration is equivalent to a choice of a basis for the chain group.
 
 \end{document}
